--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -14,10 +14,15 @@
     <div id="items"></div>
 
     <div id="sidebar">
-      <p>Edit welcome message.</p>
-      <p>Ideas: You could easily turn this into a photo sharing app, or a grocery list, or a chat room.</p>
+      <p>Mingle is a <em>fairly-anonymous<sup><del>TM</del></sup></em> chat.</p>
+      <p>Read more about it <a href="javascript:alert('Not yet')">here</a>.</p>
     </div>
   </body>
+  <script type="text/javascript">
+    var YMPParams = { autoadvance:false };
+  </script>
+  <script type="text/javascript" src="http://webplayer.yahooapis.com/player-beta.js"></script>
+  <script src="js/twitter-text.js"></script>
   <script src="vendor/couchapp/loader.js"></script>
   <script type="text/javascript" charset="utf-8">
     $.couch.app(function(app) {
