--- a/evently/profile/loggedOut/mustache.html
+++ b/evently/profile/loggedOut/mustache.html
@@ -1,1 +1,1 @@
-<p>Please log via <a target="_blank" href="https://browserid.org">BrowserID</a> to join the party.</p>
+<p align="center">To join the party, please log via <a target="_blank" href="https://browserid.org">BrowserID</a> by clicking on the blue button (top right).</p>
