--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -6,6 +6,7 @@
     <script src="https://browserid.org/include.js" type="text/javascript"></script>
   </head>
   <body>
+    <a target="_blank" href="http://github.com/thedod/Mingle"><img id="github-ribbon" src="img/github-ribbon.png" alt="Fork me on GitHub"></a>
     <div id="account"></div>
 
     <h1><img width=32 height=32 src="img/mingle.gif" alt="logo"> Mingle</h1>
@@ -14,8 +15,11 @@
     <div id="items"></div>
 
     <div id="sidebar">
-      <p>Mingle is a <em>fairly-anonymous<sup><del>TM</del></sup></em> chat.</p>
-      <p>Read more about it <a href="javascript:alert('Not yet')">here</a>.</p>
+      <p>Mingle is a chat that can be configured to be
+        <em><a target="_blank" href="https://github.com/thedod/Mingle/wiki/How-anonymous-is-fairly-anonymous">fairly-anonymous</a><sup><del>TM</del></sup></em>.
+        In order to <a href="https://github.com/thedod/Mingle/wiki/Checking-whether-anonymity-option-is-on">check</a>
+        <em>whether</em> the anonymity option is on,
+        here's the list of <a target="_blank" href="/_users/_all_docs">existing users</a>.</p>
     </div>
   </body>
   <script src="vendor/couchapp/loader.js"></script>
