Added user profile popup using domModal.jquery.js submodule
Remember to "git submodule update --init" after pulling this

--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>Mingle</title>
     <link rel="stylesheet" href="style/main.css" type="text/css">
-    <script src="https://browserid.org/include.js" type="text/javascript"></script>
   </head>
   <body>
     <a target="_blank" href="http://github.com/thedod/Mingle"><img id="github-ribbon" src="img/github-ribbon.png" alt="Fork me on GitHub"></a>
@@ -15,15 +14,14 @@
     <div id="items"></div>
 
     <div id="sidebar">
-      <p>Mingle is a chat that can be configured to be
-        <em><a target="_blank" href="https://github.com/thedod/Mingle/wiki/How-anonymous-is-fairly-anonymous">fairly-anonymous</a><sup><del>TM</del></sup></em>.
-        In order to <a href="https://github.com/thedod/Mingle/wiki/Checking-whether-anonymity-option-is-on">check</a>
-        <em>whether</em> the anonymity option is on,
-        here's the list of <a target="_blank" href="/_users/_all_docs">existing users</a>.</p>
+      <p>Here we'll have <a target="_blank" href="https://github.com/thedod/Mingle/wiki/To-do">whitelist etc.</a></p>
     </div>
   </body>
-  <script src="vendor/couchapp/loader.js"></script>
-  <script src="js/twitter-text.js"></script>
+  <script type="text/javascript" charset="utf-8" src="vendor/couchapp/loader.js"></script>
+  <script type="text/javascript" charset="utf-8" src="https://browserid.org/include.js"></script>
+  <script type="text/javascript" charset="utf-8" src="js/twitter-text.js"></script>
+  <script type="text/javascript" charset="utf-8" src="js/domModal.jquery.js"></script>
+  <link rel="stylesheet" href="style/domModal.css" type="text/css">
   <script type="text/javascript" charset="utf-8">
     // CHANGE THIS if db or design doc are NOT called mingle. Kludge explained at
     // http://permalink.gmane.org/gmane.comp.db.couchdb.couchapp.general/488
