--- a/evently/items/_changes/mustache.html
+++ b/evently/items/_changes/mustache.html
@@ -1,16 +1,30 @@
 <h3>Recent Messages</h3>
-<span id="dummy4player"></span>
 <ul id="#itemlist">
   {{#items}}
     <li>
-      <div class="avatar">
-        {{#gravatar_url}}<img src="{{gravatar_url}}" alt="{{name}}"/>{{/gravatar_url}}
-        <div class="name">
-          {{nickname}}
+      <a class="popup-link" href="#popup-{{id}}" id="popup-link-{{id}}">
+        <div class="avatar popup-link">
+          {{#gravatar_url}}<img src="{{gravatar_url}}" alt="{{name}}"/>{{/gravatar_url}}
+          <div class="name">
+            {{nickname}}
+          </div>
         </div>
+      </a>
+      <div class="hidden" id="popup-{{id}}">
+        <div class="avatar">
+          {{#gravatar_url}}<img src="{{gravatar_url}}" alt="{{name}}"/>{{/gravatar_url}}
+          <div class="name">
+            {{nickname}}
+          </div>
+        </div>
+          {{#url}}<p>Homepage: <a target="_blank" href="{{url}}">{{url}}</a></p>{{/url}}
+          <p>Id:<input class="userid" value="{{name}}" onclick="this.select()"></p>
       </div>
       <p>{{{message}}}</p>
       <div style="clear:left;"></div>
     </li>
+    <script type="text/javascript" charset="utf-8">
+      $('#popup-link-{{id}}').domModal({width:"500px",transitionRate:"fast"});
+    </script>
   {{/items}}
 </ul>
