Defusing javascript: url in profile
Thanks for the heads up, Galebo

--- a/evently/items/_changes/mustache.html
+++ b/evently/items/_changes/mustache.html
@@ -17,8 +17,8 @@
             {{nickname}}
           </div>
         </div>
-          {{#url}}<p>Homepage: <a target="_blank" href="{{url}}">{{url}}</a></p>{{/url}}
-          <p>Id:<input class="userid" value="{{name}}" onclick="this.select()"></p>
+          {{#url}}<p>About: <a target="_blank" rel="nofollow" href="{{url}}">{{url}}</a></p>{{/url}}
+          <p>Id: <input class="userid" value="{{name}}" onclick="this.select()"></p>
       </div>
       <p>{{{message}}}</p>
       <div style="clear:left;"></div>
