Changed demo url to SSL
Explicit link to favicon (now that we're not / of a vhost)

--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Mingle</title>
     <link rel="stylesheet" href="style/main.css" type="text/css">
+    <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body>
     <a target="_blank" href="http://github.com/thedod/Mingle"><img id="github-ribbon" src="img/github-ribbon.png" alt="Fork me on GitHub"></a>
