--- a/evently/items/_changes/mustache.html
+++ b/evently/items/_changes/mustache.html
@@ -18,7 +18,7 @@
           </div>
         </div>
           {{#url}}<p>About: <a target="_blank" rel="nofollow" href="{{url}}">{{url}}</a></p>{{/url}}
-          <p>Id: <input class="userid" value="{{name}}" onclick="this.select()"></p>
+          <p>Id: <input class="userid" value="{{name}}" readonly="readonly" onclick="this.select()"></p>
       </div>
       <p>{{{message}}}</p>
       <div style="clear:left;"></div>
