--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -18,6 +18,7 @@
       <p>Here we'll have <a target="_blank" href="https://github.com/thedod/Mingle/wiki/To-do">whitelist etc.</a></p>
     </div>
   </body>
+  <script type="text/javascript" charset="utf-8" src="js/util.js"></script>
   <script type="text/javascript" charset="utf-8" src="vendor/couchapp/loader.js"></script>
   <script type="text/javascript" charset="utf-8" src="https://browserid.org/include.js"></script>
   <script type="text/javascript" charset="utf-8" src="js/twitter-text.js"></script>
