README and cosmetics

--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -6,11 +6,13 @@
     <link rel="shortcut icon" href="favicon.ico">
   </head>
   <body>
-    <a target="_blank" href="http://github.com/thedod/Mingle"><img id="github-ribbon" src="img/github-ribbon.png" alt="Fork me on GitHub"></a>
+    <a target="_blank" href="http://github.com/thedod/Mingle#readme"><img id="github-ribbon" src="img/github-ribbon.png" alt="Fork me on GitHub"></a>
     <div id="account"></div>
 
-    <h1><img width=32 height=32 src="img/mingle.gif" alt="logo"> Mingle</h1>
-
+    <div id="header">
+      <span id="logo"><img width=32 height=32 src="img/mingle.gif" alt="logo">Mingle</span>
+      "Join us. <strong>Be</strong> a stranger." <sup><del>TM</del>
+    </div>
     <div id="profile"></div>
     <div id="items"></div>
 
