--- a/evently/profile/loggedOut/mustache.html
+++ b/evently/profile/loggedOut/mustache.html
@@ -1,5 +1,7 @@
-<p>To join the party, please log via <a target="_blank" href="https://browserid.org">BrowserID</a> by clicking on the blue button (top right).</p>
-<p>Here's the list of <a target="_blank" href="/_users/_all_docs">existing users</a>
-(You can use it in order to <a href="https://github.com/thedod/Mingle/wiki/Checking-whether-anonymity-option-is-on">check</a>
-whether the
-<em><a target="_blank" href="https://github.com/thedod/Mingle/wiki/How-anonymous-is-fairly-anonymous">fairly-anonymous</a><sup><del>TM</del></sup></em> option is on).</p>
+<p>Howdy stranger. To join us, sign in via <a target="_blank" href="https://browserid.org">BrowserID</a> by clicking on the blue button (top right).</p>
+<p>In order to verify that the
+<em><a target="_blank" href="https://github.com/thedod/Mingle/wiki/How-anonymous-is-fairly-anonymous">fairly-anonymous</a>
+<sup><del>TM</del></sup></em> option is
+<a target="_blank" href="https://github.com/thedod/Mingle/wiki/Checking-whether-anonymity-option-is-on">enabled</a>,
+
+see list of <a target="_blank" href="/_users/_all_docs">existing users</a>.</p>
