Added warning about Gravatar

--- a/evently/profile/noProfile/mustache.html
+++ b/evently/profile/noProfile/mustache.html
@@ -2,9 +2,11 @@
   Please setup your user profile (Gravatar email and URL are optional):<br>
   <label for="nickname">Nickname</label>
   <input type="text" name="nickname" id="nickname" value="">
-  <label for="email">Email (<em>for <a href="http://gravatar.com">Gravatar</a></em>)</label>
+  <label for="email"><a target="_blank" href="http://gravatar.com">Gravatar</a> email
+  (<a target="_blank" href="http://blog.thedod.iriscouch.com/6947682d302a1f242c16b173fa002dd2"><strong>not</strong>
+     yours</a>)</label>
   <input type="text" name="email" value=""><br>
-  <label for="url">"about" URL (blog, twitter, a video you like)</label>
+  <label for="url">"About" URL (blog, twitter, a video or song you like, etc.)</label>
     <input type="text" name="url" value="">
   <input type="submit" value="Go &rarr;">
   <input type="hidden" name="userCtxName" value="{{name}}" id="userCtxName">
