AGPL license, more friendly intro text

--- a/evently/profile/loggedOut/mustache.html
+++ b/evently/profile/loggedOut/mustache.html
@@ -1,7 +1,7 @@
-<p>Howdy stranger. To join us, sign in via <a target="_blank" href="https://browserid.org">BrowserID</a> by clicking on the blue button (top right).</p>
-<p>In order to verify that the
-<em><a target="_blank" href="https://github.com/thedod/Mingle/wiki/How-anonymous-is-fairly-anonymous">fairly-anonymous</a>
-<sup><del>TM</del></sup></em> option is
-<a target="_blank" href="https://github.com/thedod/Mingle/wiki/Checking-whether-anonymity-option-is-on">enabled</a>,
-
-see list of <a target="_blank" href="/_users/_all_docs">existing users</a>.</p>
+<p>Howdy stranger. To join us, sign in via the blue <a target="_blank" href="https://browserid.org">BrowserID</a>
+button (top right). You'll need to provide an email address. A
+properly configured server should scramble that address, making you
+<em>"<a target="_blank" href="https://github.com/thedod/Mingle/wiki/How-anonymous-is-fairly-anonymous">fairly-anonymous</a>"</em>.
+Geeks: feel free to
+<a target="_blank" href="https://github.com/thedod/Mingle/wiki/Checking-whether-anonymity-option-is-on">check</a>
+the <a target="_blank" href="/_users/_all_docs">user db</a> and verify this.</p>
