Added server-specific customization

--- a/_attachments/index.html
+++ b/_attachments/index.html
@@ -11,7 +11,8 @@
 
     <div id="header">
       <span id="logo"><img width=32 height=32 src="img/mingle.gif" alt="logo">Mingle</span>
-      "Join us. <strong>Be</strong> a stranger." <sup><del>TM</del>
+      "Join us. <strong>Be</strong> a stranger." <sup><del>TM</del></sup>
+      <div id="branding"><script language="javascript" src="/mingle/_design/customize/branding.js"></script></div>
     </div>
     <div id="profile"></div>
     <div id="items"></div>
