Added replication dashboard
Uses a "nocode" filter that doesn't replicate code (or branding :) )

--- a/customize/example/_attachments/welcome.html
+++ b/customize/example/_attachments/welcome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mingle: Join us. BE a stranger.</title>
+    <title>Mingle: Welcome to Romain Gary server</title>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <link rel="shortcut icon"
       href="http://thedod.iriscouch.com/mingle/_design/mingle/_rewrite/favicon.ico">
@@ -9,7 +9,9 @@
   <body>
     <div style="width:250px;float:right; background:#cfcfcf; margin:8px; padding:4px">
       This is the <strong>Romain Gary</strong> server.
-      For an alternate identity (using <em>the same</em> BrowserID account), join us via
+      For an
+      <a target="_blank" href="http://youtu.be/qhoh_4DpLLU">alternate identity</a>
+      (using <em>the same</em> BrowserID account), join us via
       <a target="_blank" href="https://otherdod.iriscouch.com/mingle/_design/mingle/_rewrite/">Émile Ajar</a> in another browser window.
     </div>
 
