Larger avatar in pop up
Plain vanity

--- a/evently/items/_changes/mustache.html
+++ b/evently/items/_changes/mustache.html
@@ -11,8 +11,8 @@
         </div>
       </a>
       <div class="hidden" id="popup-{{id}}">
-        <div class="avatar">
-          {{#gravatar_url}}<img src="{{gravatar_url}}" alt="{{name}}"/>{{/gravatar_url}}
+        <div class="avatar-large">
+          {{#gravatar_url_large}}<img src="{{gravatar_url_large}}" alt="{{name}}"/>{{/gravatar_url_large}}
           <div class="name">
             {{nickname}}
           </div>
