Change "join us" links to buttons

--- a/customize/example/_attachments/welcome.html
+++ b/customize/example/_attachments/welcome.html
@@ -11,8 +11,8 @@
       This is the <strong>Romain Gary</strong> server.
       For an
       <a target="_blank" href="http://youtu.be/qhoh_4DpLLU">alternate identity</a>
-      (using <em>the same</em> BrowserID account), join us via
-      <a target="_blank" href="https://otherdod.iriscouch.com/mingle/_design/mingle/_rewrite/">Émile Ajar</a> in another browser window.
+      (using <em>the same</em> BrowserID account),
+      <button onclick="location.href='https://otherdod.iriscouch.com/mingle/_design/mingle/_rewrite/'">join us via Émile Ajar</button>.
     </div>
 
     <div style="text-align:left; width:560px; margin:8px auto">
@@ -22,7 +22,7 @@
           src="http://thedod.iriscouch.com/mingle/_design/mingle/_rewrite/img/mingle.gif"></a>
         <em>Mingle</em>
       </div>
-      <a href="https://thedod.iriscouch.com/mingle/_design/mingle/_rewrite/">Join us</a>.
+      <button onclick="location.href='https://thedod.iriscouch.com/mingle/_design/mingle/_rewrite/'">Join us</button>.
       <strong>Be</strong> a stranger.
       <br>
       <br>
