More welcome page cosmetics

--- a/customize/example/_attachments/welcome.html
+++ b/customize/example/_attachments/welcome.html
@@ -12,7 +12,8 @@
       For an
       <a target="_blank" href="http://youtu.be/qhoh_4DpLLU">alternate identity</a>
       (using <em>the same</em> BrowserID account),
-      <button onclick="location.href='https://otherdod.iriscouch.com/mingle/_design/mingle/_rewrite/'">join us via Émile Ajar</button>.
+      <button onclick="location.href='https://otherdod.iriscouch.com/mingle/_design/mingle/_rewrite/'">join us</button>
+      via <a target="_blank" href="http://mingle.otherdod.iriscouch.com">Émile Ajar</a>.
     </div>
 
     <div style="text-align:left; width:560px; margin:8px auto">
